--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "license": "MIT",
   "dependencies": {
     "arangojs": "^5.8.0",
+    "koa": "^2.5.1",
+    "koa-bodyparser": "^4.2.0",
+    "koa-logger": "^3.2.0",
+    "koa-router": "^7.4.0",
     "nodemon": "^1.17.4"
   }
 }
