--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "main": "app.js",
   "scripts": {
+    "lint": "npx eslint ./app.js ./src",
     "start": "npx nodemon ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,5 +20,13 @@
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "nodemon": "^1.17.4"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jest": "^21.15.1",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.8.2"
   }
 }
