add api doc for fetching report for a certain url and period

--- a/docs/spec.yml
+++ b/docs/spec.yml
@@ -81,3 +81,46 @@ paths:
                 example:
                   url: invalid url
                   utctime: invalid utc time format. must be of YYYY-MM-DDThh:mm:ss.ssZ
+  /reports:
+    get:
+      description: the path to fetch ping reports for the certain period of time
+      parameters:
+        - in: query
+          name: url
+          required: true
+          description: the url to fetch the report. must be url-encoded
+          example: https%3A%2F%2Fkubernetes.io
+          schema:
+            type: string
+        - in: query
+          name: starttime
+          required: true
+          description: the start time in UTC of the report to fetch (YYYY-MM-DDThh:mm:ss.ssZ)
+          example: '2018-05-01T23:20:50.52Z'
+          schema:
+            type: string
+        - in: query
+          name: endtime
+          required: true
+          description: the end time in UTC of the report to fetch (YYYY-MM-DDThh:mm:ss.ssZ)
+          example: '2018-05-31T23:20:50.52Z'
+          schema:
+            type: string
+      responses:
+        '200':
+          description: not specified yet
+        '404':
+          description: no report for the url
+        '400':
+          description: bad request, input paramter error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  fieldname:
+                    description: field-level validation error message
+                    type: string
+                example:
+                  url: invalid url
+                  starttime: invalid utc time format. must be of YYYY-MM-DDThh:mm:ss.ssZ
