--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "koa-bodyparser": "^4.2.0",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
-    "nodemon": "^1.17.4"
+    "moment": "^2.22.1",
+    "nodemon": "^1.17.4",
+    "validator": "^10.2.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
