--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
-    "extends": "airbnb",
+    "extends": [
+        "airbnb",
+        "plugin:jest/recommended"
+    ],
     "env": {
         "node": true
     },
