--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "koa-router": "^7.4.0",
     "moment": "^2.22.1",
     "nodemon": "^1.17.4",
+    "supertest": "^3.1.0",
     "validator": "^10.2.0"
   },
   "devDependencies": {
